Battleships: Improved output during battle phase.