@@ -7,7 +7,7 @@ public class RandomGenerator {
         int targetsLeft = 100 - this.bu.countHits(targetBattlefield);
         int[] target = new int[2];
 
-        int countdown =  new Double(Math.floor(targetsLeft * Math.random())).intValue();
+        int countdown =  Double.valueOf(Math.floor(targetsLeft * Math.random())).intValue();
         for (int i = 2; i < 12; i++) {
             for (int j = 2; j < 12; j++) {
                 if (targetBattlefield[i][j] != 'x') {
@@ -48,8 +48,8 @@ public class RandomGenerator {
     private Ship generateHorizontalShip(int shipNumber) {
         int shipLength = bu.shipLength(shipNumber);
         int[] shipCoordinates = new int[4];
-        shipCoordinates[0] = new Double(Math.floor( (10) * Math.random() )).intValue();
-        shipCoordinates[1] = new Double(Math.floor( (11 - shipLength) * Math.random() )).intValue();
+        shipCoordinates[0] = Double.valueOf(Math.floor( (10) * Math.random() )).intValue();
+        shipCoordinates[1] = Double.valueOf(Math.floor( (11 - shipLength) * Math.random() )).intValue();
         shipCoordinates[2] = shipCoordinates[0];
         shipCoordinates[3] = shipCoordinates[1] + shipLength - 1;
         return new Ship(shipCoordinates);
@@ -58,8 +58,8 @@ public class RandomGenerator {
     private Ship generateVerticalShip(int shipNumber) {
         int shipLength = bu.shipLength(shipNumber);
         int[] shipCoordinates = new int[4];
-        shipCoordinates[0] = new Double(Math.floor( (11 - shipLength) * Math.random() )).intValue();
-        shipCoordinates[1] = new Double(Math.floor( (10) * Math.random() )).intValue();
+        shipCoordinates[0] = Double.valueOf(Math.floor( (11 - shipLength) * Math.random() )).intValue();
+        shipCoordinates[1] = Double.valueOf(Math.floor( (10) * Math.random() )).intValue();
         shipCoordinates[2] = shipCoordinates[0] + shipLength - 1;
         shipCoordinates[3] = shipCoordinates[1];
         return new Ship(shipCoordinates);
